# Rag-evaluation_LLM-as-judge_self-correction-loop-

./: core.py  evaluation.py  frontend.py  generic_queries.py  index_db.py  logger.py  pyproject.toml  run.py  securitylayer.py  updatingdb.py  webcrawling.py
chroma_db/: chroma.sqlite3
chroma_store/: chroma.sqlite3
data/: do_things_that_dont_scale.txt  how_to_get_startup_ideas.txt  keep_your_identity_small.txt
logs/correction_logs/failed/: query_20260529_142941_419537.json
logs/flow_logs/: query_20260529_134923_329729.json  query_20260529_140027_781010.json  query_20260529_142814_262772.json
