[project]
name = "demo-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mistralai>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-qdrant[fastembed]>=1.1.0",
    "langchain-tavily>=0.2.18",
    "pyproject-toml>=0.1.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
